--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==0.9
+Flask==0.10
 gunicorn==0.17.0
 Flask-PyMongo==0.3.0
 Flask-Login==0.2.11
 flask-mongoengine==0.7.1
 Flask-Script==2.0.5
 Flask-WTF==0.11
+Flask-OpenID==1.2.4
